# revr

./: CMakeLists.txt  README.md
examples/: helloworld.c  static_server.c
examples/static_website/: about.html  index.html  style.css
examples/static_website/media/: index.html
examples/static_website/subdir/: index.html
include/revr/: fs.h  http.h  revr.h  server.h  uri.h
src/: fs.c  fs.h  http.c  http.h  internal.h  revr.c  route.c  route.h  server.c  server.h  uri.c  uri.h
